[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/stimuwrite_theming_helper/CreateNewTheme.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.745098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.435294, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.745098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.839216, 0.113725, 0.0745098, 1 )

[node name="Theming Tools" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -734.0
rect_min_size = Vector2( 282, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewThemeWizardPanel" type="PanelContainer" parent="."]
anchor_right = 0.986
margin_right = 0.0599976
margin_bottom = 350.0
rect_min_size = Vector2( 275, 350 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="NewThemeWizardPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 279.0
margin_bottom = 419.0
rect_min_size = Vector2( 265, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="NewThemeWizardPanel/MarginContainer"]
margin_right = 272.0
margin_bottom = 412.0
rect_min_size = Vector2( 272, 300 )
size_flags_horizontal = 3

[node name="NewThemeWizard" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_right = 272.0
margin_bottom = 14.0
text = "New StimuWrite Theme Wizard"

[node name="HSeparator" type="HSeparator" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 272.0
margin_bottom = 22.0

[node name="ThemeNameLabel" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 272.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 0 )
text = "Theme name *"

[node name="ThemeName" type="LineEdit" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 272.0
margin_bottom = 68.0
rect_min_size = Vector2( 140, 24 )
placeholder_text = "My cool theme"

[node name="Spacer" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 272.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="ThemeAuthorLabel" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 272.0
margin_bottom = 102.0
rect_min_size = Vector2( 120, 18 )
text = "Theme author *"

[node name="ThemeAuthor" type="LineEdit" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 106.0
margin_right = 272.0
margin_bottom = 130.0
rect_min_size = Vector2( 140, 0 )
placeholder_text = "Theme Maker"

[node name="Spacer3" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 134.0
margin_right = 272.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="ThemeVersionLabel" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 146.0
margin_right = 272.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 18 )
text = "Version *"

[node name="ThemeVersion" type="LineEdit" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 168.0
margin_right = 272.0
margin_bottom = 192.0
rect_min_size = Vector2( 140, 0 )
text = "1.0"
placeholder_text = "1.0"

[node name="Spacer4" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 196.0
margin_right = 272.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="StartingTypeLabel" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 208.0
margin_right = 272.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 18 )
text = "Starting Type"

[node name="StartingTypeDropdown" type="OptionButton" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 230.0
margin_right = 272.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 28 )
text = "Light"
items = [ "Light", null, false, 0, null, "Dark", null, true, 1, null ]
selected = 0

[node name="Spacer5" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 262.0
margin_right = 272.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="IncludeExtrasLabel" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 274.0
margin_right = 272.0
margin_bottom = 288.0
text = "Include extras:"

[node name="CustomBackground" type="CheckBox" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 292.0
margin_right = 272.0
margin_bottom = 316.0
text = "Custom background"

[node name="CustomEmoji" type="CheckBox" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 320.0
margin_right = 272.0
margin_bottom = 344.0
text = "Custom emoji"

[node name="Spacer7" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 348.0
margin_right = 272.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="CreateNewTheme" type="Button" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 360.0
margin_right = 272.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 40 )
text = "Create new theme"
script = ExtResource( 2 )

[node name="Spacer6" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
margin_top = 404.0
margin_right = 272.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 3 )

[node name="ConfirmationTextPanel" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
visible = false
margin_top = 330.0
margin_right = 272.0
margin_bottom = 362.0
rect_min_size = Vector2( 272, 32 )
custom_styles/panel = SubResource( 5 )

[node name="ConfirmationText" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2/ConfirmationTextPanel"]
margin_left = 2.0
margin_top = 6.0
margin_right = 270.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 20 )
custom_colors/font_color = Color( 0, 0.435294, 0.0431373, 1 )
text = "New theme created"
align = 1
valign = 1

[node name="ErrorTextPanel" type="PanelContainer" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2"]
visible = false
margin_top = 416.0
margin_right = 272.0
margin_bottom = 448.0
rect_min_size = Vector2( 272, 32 )
custom_styles/panel = SubResource( 4 )

[node name="ErrorText" type="Label" parent="NewThemeWizardPanel/MarginContainer/VBoxContainer2/ErrorTextPanel"]
margin_left = 2.0
margin_top = 6.0
margin_right = 270.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 20 )
custom_colors/font_color = Color( 0.839216, 0.113725, 0.0745098, 1 )
text = "Please fill out all *required fields"
align = 1
valign = 1

[connection signal="pressed" from="NewThemeWizardPanel/MarginContainer/VBoxContainer2/CreateNewTheme" to="NewThemeWizardPanel/MarginContainer/VBoxContainer2/CreateNewTheme" method="_on_CreateNewTheme_pressed"]
